XP-4144 HTML Area/Image dialog - Invalid layout of the Cropping effect dropdown * Fixed incorrect positioning of Image cropping dropdown * Removed duplicate styles for the Image selector and Image cropping dropdown

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/util/htmlarea/modal-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/util/htmlarea/modal-dialog.less
@@ -156,7 +156,7 @@
       margin-bottom: 0;
       padding: 0 !important;
 
-      .content-combo-box, .@{_COMMON_PREFIX}dropdown {
+      .content-combo-box {
         .options-container {
           position: fixed !important;
         }
@@ -170,73 +170,6 @@
       }
     }
 
-    .image-selector {
-      .selected-options .selected-option {
-        margin: 0;
-        width: 100%;
-        border: none;
-        overflow-y: hidden;
-
-        .wrapper {
-          display: none;
-        }
-      }
-
-      &.image-preview .input-wrapper {
-        overflow-y: visible;
-        .rich-combobox {
-          width: 100%;
-        }
-      }
-
-      .content-item-preview-panel {
-        max-height: 420px;
-        overflow-y: auto;
-        overflow-x: hidden;
-
-        @media screen and (max-height: 720px) {
-          max-height: 270px;
-        }
-
-        @media screen and (max-height: 540px) {
-          max-height: 115px;
-        }
-
-        @media screen and (max-height: 360px) {
-          max-height: 100px;
-        }
-
-        > .progress-bar {
-          display: none;
-          width: auto;
-        }
-        &.upload {
-          margin-left: @form-label-width;
-          margin-top: 10px;
-
-          > .error {
-            width: 100%;
-          }
-
-          > .error {
-            margin-left: 0px;
-            text-align: center;
-            color: @admin-white;
-            font-weight: bold;
-            background-color: @admin-input-red;
-          }
-        }
-
-        > img {
-          display: block;
-          max-width: 640px;
-        }
-      }
-
-      .names-and-icon-view .names-view {
-        margin-left: 0;
-      }
-    }
   }
 
   .dialog-buttons {
@@ -292,43 +225,6 @@
         bottom: 3px;
       }
 
-    }
-
-    .image-cropping-selector {
-
-      width: 220px;
-      margin-left: 15px;
-      bottom: 4px;
-
-      .option-filter-input {
-        height: 26px;
-
-        .placeholder(1em, normal);
-      }
-
-      .selected-option {
-        min-height: 26px;
-        top: 4px;
-      }
-
-      .options-container {
-        height: 210px !important;
-
-        .slick-cell {
-          padding-bottom: 4px;
-          padding-top: 4px;
-        }
-      }
-
-      .names-view {
-        .main-name {
-          font-size: 12px;
-        }
-      }
-
-      .selected-option:not([style*="display: none"]) + .@{_COMMON_PREFIX}dropdown-handle {
-          top: 4px;
-      }
     }
 
   }
@@ -439,6 +335,12 @@
     input[type="checkbox"] + label:before {
       position: absolute;
       margin-left: 120px;
+    }
+
+    .@{_COMMON_PREFIX}dropdown {
+      .options-container {
+        position: fixed !important;
+      }
     }
   }
 
